# RentalCars

./: .gitignore  .travis.yml  README.md  create_venv.sh  docker-compose.yaml  server.sh
quart_backend/: .env  .travis.yml  Dockerfile  alembic.ini  dev.sh  prod.sh  pyproject.toml  requirements.txt  server.sh
quart_backend/alembic/versions/: be5acc1225fa_init.py
quart_backend/app/: __init__.py  alembic.ini  config.py  db_init.py  models.py  test_app.py
quart_backend/app/alembic/: env.py
quart_backend/app/alembic/versions/: 2e1bc63e202d_added_admin_field_to_clients.py  4470c97ebf6b_changed_user_id_to_random_uuid.py  4f427030933a_remove_admin_field_to_clients.py  5edbdb61aba9_regenerating_tables_with_uuids.py  665210150d76_add2_0_admin_field_to_clients.py  6f34d1f74cee_changing_user_id_to_random_uuid_actually.py  7449dc283f51_added_admin_field_to_clients.py  7d37b60e4342_adding_password_hashed.py  7e52dbcde3ff_merge_d_and_f.py  8290838af9de_testing_working.py  88f748a8b716_check_working.py  8cd133bcad38_regenerating_tables_with_uuids_2_try.py  966b0668b160_add2_0_admin_field_to_clients.py  9ecbd6a2bf48_changed_user_id_to_random_uuid.py  a16e53380e8e_add2_0_admin_field_to_clients.py  a74dbbd98e11_added_unique_to_clients_passport_number.py  (+7 more)
quart_backend/app/api/: __init__.py  common.py  routes.py  utils.py
quart_backend/app/base/: __init__.py  routes.py
quart_backend/app/cars/: __init__.py  routes.py
quart_backend/app/clients/: __init__.py  routes.py
quart_backend/app/common/: db_init.py
quart_backend/app/orders/: __init__.py  routes.py
(+64 files in other folders)
